# doom-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  _vizdoom.ini  doom_agent.py  doom_scenario.cfg  gdb-respfile-ONjotU  genetic_algo.py  main.py  parallel_batch_test.py  pyproject.toml  quick_start.py  requirements.txt  run_agent.py  scratch.py  test_buffers.py  test_config.cfg  test_framework.py  test_pathfinding.py  test_runs.py  validate_params.py  visualize_buffers.py  visualize_gameplay.py  vizdoom_config.cfg
agent/: __init__.py  agent.py  config.py
config/: __init__.py  combat.py  constants.py  defaults.py  navigation.py  vizdoom.cfg
core/: utils.py
docs/: HANDOFF.md  algorithm_design.md  algorithms_tree.html  architecture_design.md  class_reference.md  execution_algo_design.md  future_work.md  ga_parallelism.md  game_mechanics.md  genetic_algo_design.md  parallelism.md  platform_evaluation.md  scratch.md  state_machine_design.md  state_machine_diagram.md  system_design.md  tasks.md  telemetry.md  telemetry_tiers.md  testing.md
evolution/: __init__.py  genetic_algo.py
ga/: genetic_algo.py  genome.py  report.py  test_genome.json
logs/: batch_testing_results.json  iteration_1_results.json  iteration_2_results.json  iteration_3_results.json  iteration_4_results.json  iteration_5_results.json  last_run.json  summary.json
old_code/: README.md  action_decoder.py  writer.py
reference/: action_decoder.py  agent.py  combat.py  main.py  perception.py  writer.py
telemetry/: __init__.py  writer.py
testing/: __init__.py  test_framework.py  (+1 more)
(+135 files in other folders)
